--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  color: #434445;
+  color: #434455;
   background-color: #fff;
   font-size: 16px;
   line-height: 1.5;
@@ -18,7 +18,7 @@ body {
   line-height: 150%;
   letter-spacing: 0.02em;
 }
-.logo-item {
+.logo-two {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -34,6 +34,7 @@ body {
 .logo-one .link:hover,
 .logo-one .link:focus {
   color: #404bbf;
+  cursor: pointer;
 }
 .logo-item {
   font-family: "Raleway", sans-serif;
@@ -58,6 +59,7 @@ body {
 .main-nav:hover,
 .main-nav:focus a {
   color: #404bbf;
+  cursor: pointer;
 }
 .nav-contacts {
   font-family: "Roboto", sans-serif;
@@ -130,7 +132,7 @@ body {
   text-transform: capitalize;
 }
 .team-list {
-  background-color: #f4f4fd;
+  background-color: #ffffff;
 }
 .team.item {
   background-color: #fff;
