--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ body {
   text-transform: capitalize;
 }
 .team.item {
-  background-color: #ffffff;
+  background-color: #f4f4fd;
 }
 .team-name {
   font-weight: 500;
