--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@ body {
   font-size: 16px;
   line-height: 1.5;
 }
-.text > a {
+a {
   text-decoration: none;
 }
-.link {
+ul,
+ol {
   text-decoration: none;
 }
 .section-1 {
